[package]
name = "McName"
version = "0.1.0"
edition = "2021"
author = "Stack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.2.4", features= ["derive"]}
console = "0.15.5"
json = "0.12.4"
mac_address = "1.1.4"
regex = "1.7.3"
reqwest = {version="0.11.16", features=["json", "cookies"]}
serde = {version="1.0.160", features=["derive"]}
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = {version ="1.27.0", features=["full"]}
urlencoding = "2.1.2"
